--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,6 @@
 /WO_GameServer/Debug/vc90.idb
 /WO_GameServer/Debug/vc90.pdb
 /WarZ_Server.suo
+/MasterServer/Release
+/WO_GameServer/Release
+/SupervisorServer/Release
